--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "postbuild": "react-snap"
   },
   "eslintConfig": {
     "extends": [
@@ -43,7 +42,16 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "react-snap": "^1.23.0"
   },
-  "homepage": "http://iq-developer.github.io/oliya"
+  "reactSnap": {
+    "source": "dist",
+    "destination": "dist",
+    "include": [
+        "/",
+        "/404",
+        "/500"
+    ]
+  }
 }
