--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "oliya1",
+  "name": "oliya",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://iq-developer.github.io/oliya",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -20,6 +21,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postbuild": "react-snap"
