--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^7.0.4",
     "web-vitals": "^1.1.0"
   },
@@ -47,6 +47,6 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "react-snap": "^1.23.0"
+    "react-snap": "^1.13.1"
   }
 }
